# CT_FGO_SIM

./: .gitignore  CMakeLists.txt  README.md  rerun_stdout.txt  run_compare_121901.yaml  run_compare_121901_bru_to_frd.yaml  run_delta_debug.yaml  run_kf_pure_inertial_121901.yaml  run_kf_pure_inertial_121901_yaw_minus_65p4.yaml  run_kf_pure_inertial_121901_yaw_plus_65p4.yaml  run_ned_stdout.txt  run_pure_inertial_121901.yaml  run_pure_inertial_155826_kf_source.yaml  run_pure_inertial_kf_exact_121901.yaml  run_pure_inertial_kf_init_121901.yaml  run_pure_inertial_kf_static_align_121901.yaml
apps/: attitude_priority_main.cpp  ct_fgo_sim_main.cpp
config/: attitude_priority.yaml  minimal.yaml
data/: GNSS.txt  IMU.txt
docs/: road_profile_full_paper_design.md  single_layer_param_law_map_2026_04.md
include/ct_fgo_sim/: types.h
include/ct_fgo_sim/core/: system.h
include/ct_fgo_sim/factors/: bias_random_walk_factor.h  body_velocity_constraint_factor.h  continuous_attitude_factor.h  continuous_gnss_factor.h  continuous_inertial_factor.h  error_state_attitude_factor.h  error_state_gnss_factor.h  error_state_interval_factor.h  error_state_nhc_factor.h  error_state_process_factor.h  quaternion_prior_factor.h  road_profile_factor.h  vertical_profile_factor.h
output/: bias_nodes.txt  run_summary.txt  trajectory_enu.txt
output_delta_debug/: bias_nodes.txt  delta_estimates.txt  run_summary.txt  trajectory_enu.txt
src/core/: system.cpp
src/navigation/: interval_propagation.cpp  mechanization.cpp
tools/: analyze_yuhang_common_trajectory.py  analyze_yuhang_repeatability.py  convert_yuhang_dataset.py  plot_attitude_compare.py  plot_delta_estimates.py  plot_imu_accel_smooth.py  plot_nav_state_compare.py  plot_outputs.py  plot_repeatability_heights.py  run_attitude_ablation_matrix.py  run_yuhang_batch.py
(+7 files in other folders)
